[VL-12] Improve test part 1