@@ -4,15 +4,17 @@ import it.proconsole.library.video.adapter.xlsx.exception.InvalidXlsxFileExcepti
 import it.proconsole.library.video.adapter.xlsx.model.FilmRow;
 import it.proconsole.library.video.core.Fixtures;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Collections;
 import java.util.List;
 
+import static it.proconsole.library.video.adapter.xlsx.model.FilmRow.Builder.aFilmRow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class FilmWorkbookRepositoryTest {
   private final FilmWorkbookRepository repository = new FilmWorkbookRepository("./src/test/resources/TestCatalogoFilm.xlsx");
@@ -20,6 +22,15 @@ class FilmWorkbookRepositoryTest {
   @BeforeEach
   void setUp() {
     repository.deleteAll();
+  }
+
+  @Test
+  void deleteAllRows() {
+    repository.saveAll(List.of(anEntity(), anEntity()));
+
+    repository.deleteAll();
+
+    assertTrue(repository.findAll().isEmpty());
   }
 
   @Test
@@ -31,19 +42,26 @@ class FilmWorkbookRepositoryTest {
     assertEquals(Fixtures.readListFromClasspath("/filmRows.json", FilmRow.class), current);
   }
 
-  @Test
-  void findAllById() {
-    var film = new FilmRow(1L, "A title", 2021, Collections.emptyList(), Collections.emptyList());
-    var films = List.of(
-            film,
-            film.copy().withId(2L).build()
-    );
-    repository.saveAll(films);
+  @Nested
+  class WhenFindAllById {
+    @Test
+    void listIfPresent() {
+      var films = repository.saveAll(List.of(anEntity(), anEntity()));
+      var ids = films.stream().map(FilmRow::id).toList();
 
-    var current = repository.findAllById(List.of(100L));
+      var current = repository.findAllById(ids);
 
-    assertEquals(List.of(film), current);
+      assertEquals(films, current);
+    }
+
+    @Test
+    void emptyIfAbsent() {
+      var current = repository.findAllById(List.of(Long.MAX_VALUE));
+
+      assertTrue(current.isEmpty());
+    }
   }
+
 
   @Test
   void saveAll() {
@@ -58,5 +76,9 @@ class FilmWorkbookRepositoryTest {
   @ValueSource(strings = {"/invalidPath/TestCatalogoFilm.xlsx", "./src/test/resources/InvalidFile.xlsx"})
   void invalidXlsxFile(String path) {
     assertThrows(InvalidXlsxFileException.class, () -> new FilmWorkbookRepository(path).findAll());
+  }
+
+  private FilmRow anEntity() {
+    return aFilmRow("Title", 2021).build();
   }
 }
